--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -89,3 +89,89 @@ img{
   margin-right: 20rem;
   font-size: 2rem;
 }
+
+.startButton{
+    align-items: center;
+    background-color: initial;
+    background-image: linear-gradient(#464d55, #25292e);
+    border-radius: 8px;
+    border-width: 0;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, .1),0 3px 6px rgba(0, 0, 0, .05);
+    box-sizing: border-box;
+    color: #fff;
+    cursor: pointer;
+    display: inline-flex;
+    flex-direction: column;
+    font-family: expo-brand-demi,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+    font-size: 18px;
+    height: 52px;
+    justify-content: center;
+    line-height: 1;
+    margin: 25px;
+    outline: none;
+    overflow: hidden;
+    padding: 0 32px;
+    text-align: center;
+    text-decoration: none;
+    transform: translate3d(0, 0, 0);
+    transition: all 150ms;
+    vertical-align: baseline;
+    white-space: nowrap;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+  }
+  
+  .startButton:hover {
+    box-shadow: rgba(0, 1, 0, .2) 0 2px 8px;
+    opacity: .85;
+  }
+  
+  .startButton:active {
+    outline: 0;
+  }
+  
+  .startButton:focus {
+    box-shadow: rgba(0, 0, 0, .5) 0 0 0 3px;
+  }
+
+
+.startForm{
+  margin: 5px 0 10px;
+  font-size: 1rem;
+  color: #656880;
+  
+}
+
+.mainContainer{
+  background-image: url(https://i.imgur.com/x028G4o.jpg);
+  background-size: cover;
+  height: 100%;
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.input{
+  font-size: large;
+  height: 35px;
+  border-radius: 10px;
+}
+
+.title{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 5% 33% 25px 33%;
+}
+.enterButton{
+
+}
+.mainDisplay{
+  background-color: rgb(250 128 114 / 65%);
+  height: 20rem;
+  border-radius: 5%;
+}
